--- a/styles/index.scss
+++ b/styles/index.scss
@@ -4,7 +4,7 @@
 */
 @import 'variables';
 @import 'bootstrap.css';
-@import 'fontawesome.css', 'animations.css', 'colors.css', 'sizes.css', 'app.css', 'pages.css', 'sidebar.css';
+@import 'fontawesome.css', 'animations.css', 'colors.css', 'sizes.css', 'app.css', 'sidebar.css';
 
 body {
   font-family: 'AppContent', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
