--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -7,16 +7,24 @@
   /* Color Variables */
   @each $k,
   $v in $app-colors-mapped {
-    /* ---COLOR-#{$k}--- */
+    /* ---COLOR-#{$k}-START--- */
     --#{$k}: #{map-get($v, 'bg')};
     /* ---HSL-#{$k}--- */
     --#{$k}-hs: #{hue(map-get($v, 'bg')), saturation(map-get($v, 'bg'))};
     --#{$k}-l: #{lightness(map-get($v, 'bg'))};
     --#{$k}-a: #{alpha(map-get($v, 'bg'))};
-    --#{$k}-c: #{map-get($v, 'fg')};
-    /* --- */
+    --#{$k}-c: #{map-get($v, 'c')};
+    /* ---COLOR-#{$k}-END--- */
   }
 }
+
+/**
+* HSL Darken = level - n; Lighten = level + n.
+* {color}-hs = The Hue and Saturation level of the color.
+* {color}-l = Lightness level of the color.
+* {color}-a = Alpha level of the color.
+* {color}-c = The corresponing Text color of the color, if it is used as a background.
+*/
 
 @each $k,
 $v in $app-colors-mapped {
@@ -59,15 +67,33 @@ $v in $app-colors-mapped {
   filter: blur(5px)
 }
 
+.shadow- {
+  &1 {
+    box-shadow: var(--black) 0 3px 9px -3px;
+  }
+}
+
+[class*=shadow-] {
+  position: relative;
+
+  &::before {
+    content: "";
+    display: block;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    border-radius: inherit;
+    top: 0;
+    left: 0;
+    z-index: 0;
+  }
+}
+
 /* select, .ng-select */
 // input::placeholder,
 // input::-webkit-input-placeholder {
 //   color: #aaaaaa !important
 // }
-
-option[disabled]:first-of-type {
-  display: none;
-}
 
 body a,
 .link {
